# rda-canonical-data-pipeline

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
conf/: setting.toml  settings.toml
resources/data/db/: schema.sql
resources/data/mapping/: institution_mapping.csv
resources/scripts/: 01-conditional-restore.sh
src/: main.py  run_pipeline.py
src/cannonical_data_pipeline/: main.py
src/cannonical_data_pipeline/api/v1/: metrics.py  sync.py
src/cannonical_data_pipeline/deduplication/: add_columns.py  apply_deduplication.py  check_duplicates.py  insert_mapping.py  list_tables.py  update_uuids.py
src/cannonical_data_pipeline/infra/: commons.py  db.py
tests/: test_check_duplicates.py
